# cerebra

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
docs/: todo.txt
include/: bayes.h  density.h  linear.h  log.h
include/utils/: csv.h
scripts/: format_code.sh
src/: bayes.c  density.c  log.c
src/linear/: cblas_linear.c
src/utils/: csv.c
